--- a/style.css
+++ b/style.css
@@ -311,7 +311,6 @@ header {
     width: 100%;
     height: 100%;
     background-color: var(--primary-color);
-    
     z-index: -1;
     transition: top 0.4s ease;
     border-radius: inherit;
@@ -420,5 +419,8 @@ header {
         max-width: 300px;
 
     }
+     .head-text h3 {
+        font-size: 1.8rem;
+     }
 
  }
