--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ header {
     .logo img {
         height: 40px;
         width: auto;
-        margin: 0;
+        margin-left: 10px;
 
     }
 
