--- a/style.css
+++ b/style.css
@@ -415,8 +415,12 @@ header {
 
  }
  @media (max-width: 480px) {
+    .services {
+        margin-top: -3rem;
+    }
     .service-card {
         max-width: 300px;
+
 
     }
      .head-text h3 {
