--- a/style.css
+++ b/style.css
@@ -251,6 +251,9 @@ header {
     .hero {
         justify-content: center;
     }
+    .hero-content {
+        margin-left: 10px;
+    }
     .hero-content h1 {
         font-weight: 700;
         font-size: 2rem;
