--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@
 
 
 }
+
 html {
-     overflow-x: hidden;
+    overflow-x: hidden;
 
 }
+
 body {
     padding: 0;
     margin: 0;
@@ -115,6 +117,7 @@ header {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 1rem;
+    margin-right: -6rem;
 }
 
 .menu .menu-icon {
@@ -144,7 +147,7 @@ header {
         display: none;
     }
 
-   .menu .menu-icon {
+    .menu .menu-icon {
         display: block;
         margin-left: -50px;
 
@@ -171,6 +174,25 @@ header {
     padding: 30px;
     color: var(--gradient-deep-blue);
     flex: 0 0 30%;
+}
+.hero-content h4 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 0.8rem;
+    background-color: var(--primary-color);
+    color: #fff;
+    border-radius: 50px;
+    padding: 5px;
+    width: 250px;
+    text-align: center;
+    margin-bottom: -1rem;
+}
+.hero-content .hero-icon {
+    vertical-align: middle;
+    width: 14px;
+    height: 14px;
+    margin-right: 0.5rem;
+
 }
 
 .hero-content h1 {
@@ -249,57 +271,70 @@ header {
     height: 400px;
     width: 500px;
 }
+
 /* Hero Section Responsive layout */
- @media (max-width: 480px) {
+@media (max-width: 480px) {
     .hero {
         justify-content: center;
     }
+
     .hero-content {
         margin-left: 10px;
     }
+    .hero-content h4 {
+        margin-bottom: 0;
+        
+    }
+
     .hero-content h1 {
         font-weight: 700;
         font-size: 2rem;
         width: 380px;
     }
+
     .hero-right img {
         display: none;
     }
- }
- .services {
+}
+
+.services {
     background-color: #fff;
- }
- .services-header {
+    margin-top: 5rem;
+}
+
+.services-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-flow:row wrap;
+    flex-flow: row wrap;
     padding: 30px;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 1rem;
 
- }
- .head-text h4 {
+}
+
+.head-text h4 {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 0.9rem;
-    border:  1px solid #000;
+    border: 1px solid #000;
     border-radius: 50px;
     padding: 5px;
     width: 120px;
     text-align: center;
 
 
- }
- .head-text h3 {
+}
+
+.head-text h3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 2rem;
     margin-top: -15px;
 
- }
- 
+}
+
 .head-link .cta {
     position: relative;
     display: inline-block;
@@ -324,50 +359,51 @@ header {
 
 .head-link .cta:hover::before {
     top: 0;
-    
+
 }
 
 .head-link .cta:hover::after {
     bottom: 0;
-   
+
 }
- .head-link a {
+
+.head-link a {
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 0.9rem;
-    border:  1px solid #000;
+    border: 1px solid #d6d6d6;
     border-radius: 10px;
     padding: 10px;
     width: 150px;
     text-align: center;
     color: #000;
- }
- .head-link a:hover {
+}
+
+.head-link a:hover {
     color: #fff;
- }
- .headlink-icon{
+}
+
+.headlink-icon {
     vertical-align: middle;
- }
-  .services {
-    margin-top: 5rem;
-    margin-bottom: 2rem;
-  }
- .service-container {
+}
+
+.service-container {
     display: flex;
-    flex-flow:  row wrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    
- }
+
+}
+
 .service-card {
     background-color: #ededed;
     color: #000;
     padding: 20px;
     max-width: 250px;
     height: 200px;
-   /*box-shadow: 0 8px 10px rgba(107, 107, 107, 0.08);*/
+    /*box-shadow: 0 8px 10px rgba(107, 107, 107, 0.08);*/
     border-radius: 12px;
     position: relative;
     display: inline-block;
@@ -376,9 +412,221 @@ header {
     z-index: 0;
     transform: color 0.3s ease;
 
- }
- 
+}
+
 .service-card::before {
+    content: "";
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color);
+    z-index: -1;
+    transition: top 0.4s ease;
+    border-radius: inherit;
+}
+
+.service-card:hover::before {
+    top: 0;
+
+}
+
+.service-card:hover {
+    color: #fff;
+}
+
+.service-card:hover::after {
+    bottom: 0;
+
+}
+
+.service-card h5 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.service-card p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 0.9rem;
+
+}
+
+.service-card img {
+    width: 250px;
+    border-radius: 10px;
+    height: 120px;
+
+}
+
+@media (max-width: 480px) {
+    .services {
+        margin-top: -3rem;
+        margin-bottom: 1rem;
+    }
+
+    .service-card {
+        max-width: 300px;
+
+
+    }
+
+    .head-text h3 {
+        font-size: 1.8rem;
+    }
+
+}
+
+.how-it-work {
+    background-color: #fff;
+    margin-top: 5rem;
+    height: 100vh;
+
+}
+
+.how-it-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+
+}
+
+.how-it-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.how-it-text h4 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 0.8rem;
+    background-color: var(--primary-color);
+    color: #fff;
+    border-radius: 50px;
+    padding: 5px;
+    width: 120px;
+    text-align: center;
+
+
+}
+
+.how-it-text h3 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 2rem;
+    margin-top: -10px;
+    text-align: center;
+
+}
+
+.how-it-text p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    width: 700px;
+    text-align: center;
+    margin-top: -1.5rem;
+
+
+
+}
+
+.how-head-link .cta {
+    position: relative;
+    display: inline-block;
+    align-items: center;
+    overflow: hidden;
+    z-index: 0;
+    transform: color 0.3s ease;
+}
+
+.how-head-link .cta::before {
+    content: "";
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-color);
+    z-index: -1;
+    transition: top 0.4s ease;
+    border-radius: inherit;
+}
+
+.how-head-link .cta:hover::before {
+    top: 0;
+
+}
+
+.how-head-link .cta:hover::after {
+    bottom: 0;
+
+}
+
+.how-head-link a {
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 0.9rem;
+    border: 1px solid #000;
+    border-radius: 10px;
+    padding: 10px;
+    width: 150px;
+    text-align: center;
+    color: #000;
+}
+
+.how-head-link a:hover {
+    color: #fff;
+}
+
+.how-link-icon {
+    vertical-align: middle;
+    stroke: var(--gradient-deep-blue);
+
+}
+
+.how-it-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+
+}
+
+.how-it-card .hcard-icon {
+    width: 40px;
+    height: 40px;
+    stroke: var(--primary-color);
+}
+
+.how-it-card {
+    background-color: #fff;
+    color: #000;
+    padding: 20px;
+    max-width: 330px;
+    height: 180px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+    border-radius: 12px;
+    position: relative;
+    display: inline-block;
+    align-items: center;
+    overflow: hidden;
+    z-index: 0;
+    transform: color 0.3s ease;
+
+}
+
+.how-it-card::before {
     content: "";
     position: absolute;
     top: -100%;
@@ -391,46 +639,158 @@ header {
     border-radius: inherit;
 }
 
-.service-card:hover::before {
+.how-it-card:hover::before {
     top: 0;
-    
+
 }
-.service-card:hover {
+
+.how-it-card:hover {
     color: #fff;
 }
 
-.service-card:hover::after {
+.how-it-card:hover::after {
     bottom: 0;
-   
+
 }
- .service-card h5 {
+
+.how-it-card h5 {
     font-family: "Montserrat", sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.2rem;
- }
- .service-card p {
+}
+
+.how-it-card p {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    margin-top: -1.2rem;
     
- }
- .service-card img {
+
+}
+
+.how-it-card img {
     width: 250px;
     border-radius: 10px;
     height: 120px;
 
- }
- @media (max-width: 480px) {
-    .services {
-        margin-top: -3rem;
+}
+
+@media (max-width: 480px) {
+    .how-it-work {
+        margin-top: 3rem;
+        margin-bottom: 3rem;
     }
-    .service-card {
+
+    .how-it-card {
         max-width: 300px;
+        margin-top: 1rem;
 
 
     }
-     .head-text h3 {
-        font-size: 1.8rem;
-     }
 
- }
+    .how-it-text h3 {
+        font-size: 1.5rem;
+    }
+
+    .how-it-text p {
+        font-size: 0.8rem;
+        width: 350px;
+    }
+
+}
+
+.testimonials {
+    text-align: center;
+    margin-top: -5rem;
+  
+   
+
+}
+
+.t-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+.t-header h4 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 0.8rem;
+    background-color: var(--primary-color);
+    color: #fff;
+    border-radius: 50px;
+    padding: 5px;
+    width: 120px;
+    text-align: center;
+
+}
+
+.t-header h3 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 2rem;
+    margin-top: -10px;
+    text-align: center;
+}
+
+.t-header p {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: -1.5rem;
+}
+
+.testimonial-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.testimonial-card {
+    background: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    margin-top: 1rem;
+}
+
+.testimonial-card:hover {
+    transform: translateY(-5px);
+}
+
+.testimonial-card .quote {
+    font-size: 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-style: italic;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.testimonial-card h4 {
+    font-size: 0.9rem;
+    color: var(--primary-color);
+    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+    
+}
+@media (max-width: 480px) {
+    .testimonials {
+        margin-top: 15rem;
+    }
+    .t-header h3 {
+        font-size: 1.5rem;
+        
+    }
+}
+
