--- a/index.css
+++ b/index.css
@@ -894,9 +894,10 @@ header {
     }
 
     .how-it-text p {
-        font-size: 0.7rem;
-        width: 350px;
-        line-height: 1.3;
+        width: 380px;
+        font-size: 0.9rem;
+        text-align: center;
+        margin-top: -0.5rem;
     }
 
 }
@@ -998,7 +999,9 @@ header {
     }
 
     .t-header p {
-        font-size: 0.7rem;
+        font-size: 0.9rem;
+        text-align: center;
+        margin-top: -0.5rem;
     }
 }
 
